@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2011, 2024 Google, Inc. and others.
+ * Copyright (c) 2011, 2025 Google, Inc. and others.
  *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License 2.0 which is available at
@@ -252,15 +252,15 @@ public class StandardConvertersTest extends SwingModelTest {
 		assertEquals("java.util.Locale.ENGLISH", converter.toJavaSource(null, Locale.ENGLISH));
 		assertEquals(
 				"java.util.Locale.CANADA_FRENCH",
-				converter.toJavaSource(null, new Locale("fr", "CA")));
+				converter.toJavaSource(null, Locale.of("fr", "CA")));
 		assertEquals("java.util.Locale.US", converter.toJavaSource(null, Locale.US));
-		assertEquals("new java.util.Locale(\"ru\")", converter.toJavaSource(null, new Locale("ru")));
+		assertEquals("new java.util.Locale(\"ru\")", converter.toJavaSource(null, Locale.of("ru")));
 		assertEquals(
 				"new java.util.Locale(\"ru\", \"RU\")",
-				converter.toJavaSource(null, new Locale("ru", "RU")));
+				converter.toJavaSource(null, Locale.of("ru", "RU")));
 		assertEquals(
 				"new java.util.Locale(\"no\\tlocale\")",
-				converter.toJavaSource(null, new Locale("no\tlocale")));
+				converter.toJavaSource(null, Locale.of("no\tlocale")));
 	}
 
 	////////////////////////////////////////////////////////////////////////////
